--- a/emswebapp/src/main/resources/templates/addEmployeeForm.html
+++ b/emswebapp/src/main/resources/templates/addEmployeeForm.html
@@ -3,51 +3,189 @@
 
 
 <!-- Head Section -->
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Add Employee</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    
+    <style>
+        .well {
+            background: transparent;
+            background: #cae6f438;
+        }
+    </style>
+
 </head>
 
 
-<!-- Body Section -->
-
 <body>
+
     <div class="container">
 
-        <h2 class="alert alert-info" style="margin-top: 10px; text-align: center;">Employee Management System</h2>
-        <br>
-        <p class="h3 mb-4">Add Employee</p>
+        <h2 class="alert alert-info" style="margin-top: 10px; margin-bottom:0; text-align: center;">Employee Management System</h2>
+
+        <form class="well form-horizontal" th:action="@{/saveEmployee}" th:object="${employee}" method="POST"
+            id="contact_form">
+            <fieldset>
+
+                <h3 class="alert" style="text-align: center; margin-bottom: 20px;"><b>Add Employee</b></h3>
+
+                <!-- First name -->
+                <div class="form-group">
+                    <label class="col-md-4 control-label">First Name</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input th:field="*{firstName}" name="firstName" placeholder="First Name"
+                                class="form-control" type="text">
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="alert alert-warning" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div> -->
+
+                <!-- Last Name -->
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Last Name</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input th:field="*{lastName}"  placeholder="Last Name" class="form-control"
+                                type="text">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Email -->
+                <div class="form-group">
+                    <label class="col-md-4 control-label">E-Mail</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input th:field="*{email}" name="email" placeholder="E-Mail Address" class="form-control"
+                                type="text">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Mobile -->
+                <div class="form-group">
+                    <label class="col-md-4 control-label">Phone</label>
+                    <div class="col-md-4 inputGroupContainer">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+                            <input th:field="*{mobile}" name="phone" placeholder="9876543210" class="form-control"
+                                type="text">
+                        </div>
+                    </div>
+                </div>
 
 
-        <form class="form" th:action="@{/saveEmployee}"
-            th:object="${employee}" method="POST">
+                <!-- Success message
+                <div class="alert alert-success" role="alert" id="success_message">Success <i
+                        class="glyphicon glyphicon-thumbs-up"></i></div> -->
 
-            <input type="text" th:field="*{firstName}" placeholder="First Name"
-                class="form-control">      
-            <div class="alert alert-warning" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div>
-            
-            <br>
-        
-            <input type="text" th:field="*{lastName}" placeholder="Last Name"
-                class="form-control">
-            <div class="alert alert-warning" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></div>
-        
-            <br>
+                <!-- Button -->
+                <div class="form-group">
+                    <label class="col-md-4 control-label"></label>
+                    <div class="col-md-4">
+                        <button type="submit" class="btn btn-warning col-md-3">Add</button>
+                    </div>
+                </div>
 
-            <input type="text" th:field="*{email}" id="email" placeholder="Email"
-                class="form-control">
-            <div class="alert alert-warning" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></div>
-            
-            <br>
-
-            <button type="submit" class="btn btn-info col-2">Save</button> 
+            </fieldset>
         </form>
 
-        
-        <hr>
-        <a th:href="@{/}">Back to Employees List</a>
+        <a class="btn btn-info" style="color: black;" th:href="@{/}">Back to Employees List</a>
+
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
+        type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
+        type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"
+        type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"
+        type="text/javascript"></script>
+    
+    <script>
+        $(document).ready(function () {
+            $('#contact_form').bootstrapValidator({
+                // To use feedback icons, ensure that you use Bootstrap v3.1.0 or later
+                feedbackIcons: {
+                    valid: 'glyphicon glyphicon-ok',
+                    invalid: 'glyphicon glyphicon-remove',
+                    validating: 'glyphicon glyphicon-refresh'
+                },
+                fields: {
+                    firstName: {
+                        validators: {
+                            stringLength: {
+                                min: 2,
+                            },
+                            notEmpty: {
+                                message: 'Field can not be empty'
+                            }
+                        }
+                    },
+                    lastName: {
+                        validators: {
+                            stringLength: {
+                                min: 2,
+                            },
+                            notEmpty: {
+                                message: 'Field can not be empty'
+                            }
+                        }
+                    },
+                    email: {
+                        validators: {
+                            notEmpty: {
+                                message: 'Field can not be empty'
+                            },
+                            emailAddress: {
+                                message: 'Please enter a valid email address'
+                            }
+                        }
+                    },
+                    mobile: {
+                        validators: {
+                            notEmpty: {
+                                message: 'Field can not be empty'
+                            },
+                            phone: {
+                                country: 'IN',
+                                message: 'Please enter a vaild phone number with area code'
+                            }
+                        }
+                    }
+                }
+            })
+                .on('success.form.bv', function (e) {
+                    $('#success_message').slideDown({ opacity: "show" }, "slow") // Do something ...
+                    $('#contact_form').data('bootstrapValidator').resetForm();
+
+                    // Prevent form submission
+                    e.preventDefault();
+
+                    // Get the form instance
+                    var $form = $(e.target);
+
+                    // Get the BootstrapValidator instance
+                    var bv = $form.data('bootstrapValidator');
+
+                    // Use Ajax to submit form data
+                    $.post($form.attr('action'), $form.serialize(), function (result) {
+                        console.log(result);
+                    }, 'json');
+                });
+        });
+    </script>
+
 </body>
+
+</html>
