added search feature

--- a/emswebapp/src/main/resources/templates/index.html
+++ b/emswebapp/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="col-md-5">
-                <input class="form-control ml-5 mr-sm-2 mb-3" type="search" th:value="${searchedName}"  name="employeeName"  placeholder="Search by name" />
+                <input class="form-control ml-5 mr-sm-2 mb-3" type="search" th:value="${searchedName}"  name="name"  placeholder="Search by name" />
             </div>
            <div class="col-md-1" style="text-align: right;">
                 <button class="btn btn-success mb-3" type="submit">Search</button>
