--- a/emswebapp/src/main/resources/templates/addEmployeeForm.html
+++ b/emswebapp/src/main/resources/templates/addEmployeeForm.html
@@ -2,13 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 
-<!-- Head Section -->
 
+<!-- Head Section -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Add Employee</title>
 
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     
@@ -18,21 +19,34 @@
             background: #cae6f438;
         }
     </style>
-
 </head>
 
 
-<body>
 
+<!-- Body Section -->
+<body>
     <div class="container">
 
-        <h2 class="alert alert-info" style="margin-top: 10px; margin-bottom:0; text-align: center;">Employee Management System</h2>
 
-        <form class="well form-horizontal" th:action="@{/saveEmployee}" th:object="${employee}" method="POST"
-            id="contact_form">
+        <h2 class="alert alert-info" 
+            style="margin-top: 10px; 
+                    margin-bottom:0; 
+                    text-align: center;">
+            Employee Management System
+        </h2>
+
+
+        <form class="well form-horizontal" 
+            th:action="@{/saveEmployee}" th:object="${employee}" method="POST" id="contact_form">
+
             <fieldset>
 
-                <h3 class="alert" style="text-align: center; margin-bottom: 20px;"><b>Add Employee</b></h3>
+                <h3 class="alert" 
+                    style="text-align: center; 
+                        margin-bottom: 20px;">
+                    <b>Add Employee</b>
+                </h3>
+
 
                 <!-- First name -->
                 <div class="form-group">
@@ -47,6 +61,7 @@
                 </div>
                 <!-- <div class="alert alert-warning" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></div> -->
 
+
                 <!-- Last Name -->
                 <div class="form-group">
                     <label class="col-md-4 control-label">Last Name</label>
@@ -59,6 +74,7 @@
                     </div>
                 </div>
 
+
                 <!-- Email -->
                 <div class="form-group">
                     <label class="col-md-4 control-label">E-Mail</label>
@@ -70,6 +86,7 @@
                         </div>
                     </div>
                 </div>
+
 
                 <!-- Mobile -->
                 <div class="form-group">
@@ -84,10 +101,6 @@
                 </div>
 
 
-                <!-- Success message
-                <div class="alert alert-success" role="alert" id="success_message">Success <i
-                        class="glyphicon glyphicon-thumbs-up"></i></div> -->
-
                 <!-- Button -->
                 <div class="form-group">
                     <label class="col-md-4 control-label"></label>
@@ -96,6 +109,10 @@
                     </div>
                 </div>
 
+                
+                <!--CSRF-->
+                <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
+
             </fieldset>
         </form>
 
@@ -103,6 +120,7 @@
 
     </div>
 
+    <!-- JavaScripts for bootstrap + validation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"
         type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"
@@ -112,6 +130,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js"
         type="text/javascript"></script>
     
+    <!-- Validation -->
     <script>
         $(document).ready(function () {
             $('#contact_form').bootstrapValidator({
@@ -159,7 +178,7 @@
                             },
                             phone: {
                                 country: 'IN',
-                                message: 'Please enter a vaild phone number with area code'
+                                message: 'Please enter a vaild phone number'
                             }
                         }
                     }
