--- a/emswebapp/src/main/resources/templates/index.html
+++ b/emswebapp/src/main/resources/templates/index.html
@@ -4,19 +4,28 @@
         xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CosmostakeR</title>
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
+
 
 
 <body>
     <div class="container">
         
-        <h2 class="alert alert-info" style="margin-top: 10px; text-align: center;">Employee Management System</h2>
+        <h2 class="alert alert-info" 
+            style="margin-top: 10px; 
+                    text-align: center;">
+            Employee Management System
+        </h2>
         
+
         <div>
             User: <span sec:authentication="name"></span>
             <br>
@@ -35,12 +44,16 @@
             </div>
 
             <div class="col-md-5">
-                <input class="form-control ml-5 mr-sm-2 mb-3" type="search" th:value="${searchedName}"  name="name"  placeholder="Search by name" />
+                <input class="form-control ml-5 mr-sm-2 mb-3" 
+                        type="search" th:value="${searchedName}"  
+                        name="name"  placeholder="Search by name" />
             </div>
+
            <div class="col-md-1" style="text-align: right;">
                 <button class="btn btn-success mb-3" type="submit">Search</button>
            </div> 
         </form>
+
 
 
         <table class="table table-bordered table-striped">
@@ -62,7 +75,10 @@
             <tbody>
                 <!-- If employee is null print no record found-->
                 <tr th:if="${listEmployees.size() == 0}">
-                    <td colspan="6" class="text-center" style="color: #dc3545;">No record found</td>
+                    <td colspan="6" class="text-center" 
+                        style="color: #dc3545;">
+                        No record found
+                    </td>
                 </tr>
 
                 <!-- If employee is not null print all the records -->
@@ -101,3 +117,4 @@
     </div>
     
 </body>
+</html>
