added register backend + ui

--- a/emswebapp/src/main/resources/templates/index.html
+++ b/emswebapp/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 
 
 
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +14,7 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
+
 
 
 
@@ -33,6 +35,7 @@
             <br><br>
         </div>
         
+
 
         <!-- Search form -->
         <form th:action="@{/search}" class="row">
@@ -65,7 +68,7 @@
                     <th>Mobile</th>
                     <th>Email</th>
 
-                    <!-- <th>Action</th> -->
+                    <!-- Show action tab only to Admin -->
                     <div sec:authorize="hasRole('ROLE_ADMIN')">
                         <th>Action</th>
                     </div>
@@ -89,10 +92,11 @@
                     <td th:text="${employee.mobile}" class="text-center"></td>
                     <td th:text="${employee.email}" class="text-center"></td>
 
+                    <!--Show Update and Delete buttons to only admin-->
                     <div sec:authorize="hasRole('ROLE_ADMIN')"> 
                         <td class="text-center">
                             <!-- Update button -->
-                            <a th:href="@{/showUpdateEmployeeForm{id}(id=${employee.id})}"
+                            <a th:href="@{/updateEmployee{id}(id=${employee.id})}"
                                 class="btn btn-info btn-sm">
                                 Update
                             </a>
@@ -106,6 +110,7 @@
                         </td>
                     </div> 
                 </tr>
+
 
 
                 <!-- Pagination -->
@@ -166,7 +171,7 @@
 
 
         
-        <!-- Add a logout button -->
+        <!-- Logout button -->
         <form action="#" th:action="@{/logout}" method="POST">
             <input type="submit" value="Logout" class="btn btn-warning mt-2" />
         </form>
